--- a/jsconfig.json
+++ b/jsconfig.json
@@ -28,6 +28,9 @@
       ],
       "vue$": [
         "node_modules/vue/dist/vue.runtime.esm-bundler.js"
+      ],
+      "variable/*":[
+        "src/variable/variable.js"
       ]
     }
   },
